--- a/notes/references.bib
+++ b/notes/references.bib
@@ -201,6 +201,13 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@misc{wu2016google,
+	title={Google's neural machine translation system: Bridging the gap between human and machine translation},
+	author={Wu, Yonghui and Schuster, Mike and Chen, Zhifeng and Le, Quoc V and Norouzi, Mohammad and Macherey, Wolfgang and Krikun, Maxim and Cao, Yuan and Gao, Qin and Macherey, Klaus and others},
+	journal={arXiv preprint arXiv:1609.08144},
+	year={2016}
+}
+
 @article{DBLP:journals/corr/VaswaniSPUJGKP17,
   author    = {Ashish Vaswani and
                Noam Shazeer and
@@ -1103,6 +1110,24 @@
 	pages={37075-37085},
 	doi={10.1109/ACCESS.2021.3062654}}
 
+@inproceedings{heck-etal-2020-trippy,
+	title = "{T}rip{P}y: A Triple Copy Strategy for Value Independent Neural Dialog State Tracking",
+	author = "Heck, Michael  and
+	van Niekerk, Carel  and
+	Lubis, Nurul  and
+	Geishauser, Christian  and
+	Lin, Hsien-Chin  and
+	Moresi, Marco  and
+	Gasic, Milica",
+	booktitle = "Proceedings of the 21th Annual Meeting of the Special Interest Group on Discourse and Dialogue",
+	month = jul,
+	year = "2020",
+	address = "1st virtual meeting",
+	publisher = "Association for Computational Linguistics",
+	url = "https://aclanthology.org/2020.sigdial-1.4",
+	pages = "35--44",
+	abstract = "Task-oriented dialog systems rely on dialog state tracking (DST) to monitor the user{'}s goal during the course of an interaction. Multi-domain and open-vocabulary settings complicate the task considerably and demand scalable solutions. In this paper we present a new approach to DST which makes use of various copy mechanisms to fill slots with values. Our model has no need to maintain a list of candidate values. Instead, all values are extracted from the dialog context on-the-fly. A slot is filled by one of three copy mechanisms: (1) Span prediction may extract values directly from the user input; (2) a value may be copied from a system inform memory that keeps track of the system{'}s inform operations (3) a value may be copied over from a different slot that is already contained in the dialog state to resolve coreferences within and across domains. Our approach combines the advantages of span-based slot filling methods with memory methods to avoid the use of value picklists altogether. We argue that our strategy simplifies the DST task while at the same time achieving state of the art performance on various popular evaluation sets including Multiwoz 2.1, where we achieve a joint goal accuracy beyond 55{\%}.",
+}
 
 @book {carlsson2022topologicaldataanalysis,
 	AUTHOR = {Carlsson, Gunnar and Vejdemo-Johansson, Mikael},
@@ -1126,6 +1151,15 @@
 	primaryClass={cs.CL}
 }
 
+@misc{glaese2022improving,
+	title={Improving alignment of dialogue agents via targeted human judgements},
+	author={Glaese, Amelia and McAleese, Nat and Tr{\k{e}}bacz, Maja and Aslanides, John and Firoiu, Vlad and Ewalds, Timo and Rauh, Maribeth and Weidinger, Laura and Chadwick, Martin and Thacker, Phoebe and others},
+	year={2022},
+	eprint={2209.14375},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
 @misc{Ramesh2022HierarchicalTI,
 	title={Hierarchical Text-Conditional Image Generation with CLIP Latents},
 	author={Aditya Ramesh and Prafulla Dhariwal and Alex Nichol and Casey Chu and Mark Chen},
@@ -1133,6 +1167,13 @@
 	eprint={2204.06125},
 	archivePrefix={arXiv},
 	primaryClass={cs.CV}
+}
+
+@misc{radford2022robust,
+	title={Robust speech recognition via large-scale weak supervision},
+	author={Radford, Alec and Kim, Jong Wook and Xu, Tao and Brockman, Greg and McLeavey, Christine and Sutskever, Ilya},
+	journal={arXiv preprint arXiv:2212.04356},
+	year={2022}
 }
 
 @misc{ChatGPT, 
